renamed "names" -> "attr_keys"; generalized "attr_keys" parsing code
